testsuite/tests/linear/should_fail/LinearLet3.stderr

LinearLet3.hs:5:7: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from multiplicity of ‘z’
    • In the expression:
        let
          %1 y = x
          %1 z = y
        in (y, y)
      In an equation for ‘f’:
          f x
            = let
                %1 y = x
                %1 z = y
              in (y, y)
